# aoc2017

./: .gitignore  01-inverse-captcha.coco  01-inverse-captcha.hs  01-inverse-captcha.py  02-corruption-checksum.py  03-spiral-memory.go  04-high-entropy-passphrases.py  05-a-maze-of-twisty-trampolines.cc  06-memory-reallocation.py  07-recursive-circus.rb  08-i-heard-you-like-registers.py  09-stream-processing.hs  10-knot-hash.hs  11-hex-ed.py  12-digital-plumber.py  13-packet-scanners-redux.hs  13-packet-scanners.hs  14-disk-defragmentation.hs  15-dueling-generators.py  15-dueling-generators.rs  16-permutation-promenade.jl  16-permutation-promenade.py  17-spinlock.py  17-spinlock.rs  18-duet.hs  19-a-series-of-tubes.rs  20-particle-swarm.py  21-fractal-art.py  22-sporifica-virus.rs  23-coprocessor-conflagration.hs  24-electromagnetic-moat.rs  25-the-halting-problem.py  Makefile  Pipfile  README.md  aoc2017.cabal  stack.yaml
haskell/: 01-inverse-captcha.hs  09-stream-processing.hs  10-knot-hash.hs  13-packet-scanners-redux.hs  13-packet-scanners.hs  14-disk-defragmentation.hs  18-duet.hs  23-coprocessor-conflagration.hs  KnotHash.hs  aoc2017.cabal
python/: 02-corruption-checksum.py  04-high-entropy-passphrases.py  06-memory-reallocation.py  08-i-heard-you-like-registers.py  11-hex-ed.py  12-digital-plumber.py  15-dueling-generators.py  16-permutation-promenade.py  17-spinlock.py  20-particle-swarm.py  21-fractal-art.py  25-the-halting-problem.py
rust/: Cargo.toml
rust/src/: lib.rs  spinlock.rs
