name:                aoc2017
version:             0.1.0.0
description:         Advent of Code solutions
license:             GPL
-- license-file:        LICENSE
author:              Jez Cope
maintainer:          j.cope@erambler.co.uk
build-type:          Simple
cabal-version:       >=1.10

executable 23-coprocessor-conflagration
 main-is:           23-coprocessor-conflagration.hs 
 build-depends:     base >=4.10, vector, monad-loops, parsec, containers, mtl
 default-language:  Haskell2010
 default-extensions: BangPatterns
